some new templates
templates

--- a/index.html
+++ b/index.html
@@ -5,14 +5,9 @@ title: Legal Boilerplate
 <section id="list">
   <article>
     <header>
-      <h1>Legal Boilerplate</h1>
+      <h1>Form Example</h1>
     </header>
-    <p>These templates are free and open source. Visit the <a href="{{ site.owner.github }}/legal">Cofounders GitHub repository</a> to edit, discuss, and contribute.</p>
-    <p><b>Cofounders Pte Ltd is not a law firm, and the contributors to this service are not acting as your attorney.</b>
-      The template authors and Cofounders Pte Ltd are not responsible for the consequences of use.
-      You should read and understand the templates and determine the suitability for their particular situation.
-      If in doubt, you should consult professional advisors.
-    </p>
+    <p>Templates for licesning.</p>
     <hr />
     <ol>
       {% for post in site.posts %}
