--- a/_posts/2013-11-03-convertible_loan_agreement.html
+++ b/_posts/2013-11-03-convertible_loan_agreement.html
@@ -1,17 +1,16 @@
 ---
 layout: document
-title: Convertible Loan Agreement
+title: Content Licensing
 license:
-  name: Creative Commons Attribution 3.0 Singapore (CC BY 3.0 SG)
-  url: http://creativecommons.org/licenses/by/3.0/sg/deed.en_US
+  name: Toca Licnesing All Rights Reserved
+  url: http://exotericgrowth.com
 authors:
-  - name: Bernard Leong
-    contact: http://www.bernardleong.com/
-  - name: Huifen Zheng
-    contact: http://aicalico.com/
+  - name: tylermalin
+    contact: http://exotericgrowth.com
 tags:
-  - entrepreneur
-  - investor
+  - youtube 
+  - content
+  - video licesing
 ---
 <h1>Convertible Loan Agreement</h1>
 <p><b>This agreement</b> (the <dfn>Agreement</dfn>) is entered into as of <input type="date" /> between</p>
