--- a/_posts/2015-5-5-toca.html
+++ b/_posts/2015-5-5-toca.html
@@ -11,24 +11,23 @@ tags:
   - youtube 
   - content
   - video
-
-  ______
+---
 
 <h2>TOCAVISION VIDEO EXPERIENCE DIGITAL VIDEO LICENSE AGREEMENT</h2>
 
-<p> This Digital Video License Agreement (the <dfn>“Agreement”</dfn>), effective as of <input type="date" /> (the <dfn>“Effective Date”</dfn>), is made and entered into by and between <li>
+<p> This Digital Video License Agreement (the “Agreement”), effective as of <input type="date" /> (the “Effective Date”), is made and entered into by and between <li>
     <input placeholder="Toca Boca, Inc." /> a company
     registered in Caliornia, USA</li>
     <li>with registered office at <input placeholder="Address" />
      (the <df>“LICENSEE”,</dfn>;
      <li> and you<input placeholder="Your Name" /> A Company Name and Type or Individual located at <input placeholder="Address" />
-     (the <df>“Content Provider”,</dfn>
+     (the “Content Provider”>
      <ol>
   <li>
     <h4>Interpretation</h4>
     <dl>
       <dt><dfn>LICENSEE</dfn> means</dt>
-      <dd>ithe Toca Boca, Inc. individually, effective upon the date each entity executes this Agreement: (a) and (b) any other affiliate that joins as a party to this Agreement as provided in Section 5.;</dd>
+      <dd>the Toca Boca, Inc. individually, effective upon the date each entity executes this Agreement: (a) and (b) any other affiliate that joins as a party to this Agreement as provided in Section 5.;</dd>
 
       <dt><dfn>FIXED FEE</dfn> means</dt>
       <dd>THIS AGREEMENT IS FOR A FIXED FEE - WHY?
@@ -36,34 +35,30 @@ tags:
 Probably the simplest way to structure license fees (otherwise referred to as royalties) is through a fixed fee payment. Under such a model, the licensee pays a set amount determined at the time the agreement is signed. A benefit of the fixed fee to the licensor is the certainty of revenue either up front or at pre-determined installment dates. From the perspectives of both licensor and licensee, there is the advantage of not having to track royalty payments. </dd>
 <dt><dfn>INITIAL TERM</dfn> Why three years?</dt>
 <dd>We are making an investment in your content thourgh upfront payment, we need the security of having a set amount of time to run the content in order to recoup the value.  Additionally as this is second run (past release) content that is publically available on other media sources, and this is a non-exclusive agreement we think its fair to ask for.</dd>
-<dt><dfn>Renewal Term</dfn> means </dt>
+<dt><dfn>RENEWAL TERM</dfn> means </dt>
 <dd>Each Renewal Term extends rights to distribution for an additional twelve "12" Months after the expiration of the initial three "3" year term.</dd>
-<dt><dfn>Term</dfn> means </dt>
+<dt><dfn>TERM</dfn> means </dt>
 <dd>The Term is the Initial Term plus each Renewal Term.</dd>
-<dt><dfn>Territory</dfn>means </dt>
+<dt><dfn>TERRITORY</dfn>means </dt>
 <dd>The Geogrpahic Regions for which License apply.</dd>
-<dt><dfn>Service</dnf>means </dt>
+<dt><dfn>SERVICE</dnf>means </dt>
 <dd>The Toca Boca Service is </dd>
-<dt><dfn>Non-transactional Access</dfn> means </dt>
-<dd> Subscription video on demand (SVOD)
-
-Allows for a digital access of the content in which consumers are charged monthly fees in return for accessing the platforms full library. access digital copies of audio-video content on a subscription basis, including on a subscription basis supported by ads, free-on-demand basis or via other non-transactional basis for electronic delivery and repeated viewing during the Term</dd>
-
-<dfn> TERM </dfn>
-<dt><dfn> may allow customers to</dfn> Why both Ad Supported Access and Non-Transactional (SVOD)?</dt>
-<dd>While we never intend to run adveristment in our mobile product it is possible that distribution of our experience exends to platforms that have ads in the future.  This provision is here to protect against the need to renegiate in the unlikley event that this happens and provides additional revenue to you if it does.</dd>
+<dt><dfn>NON-TRANSACTIONAL ACCESS</dfn> means </dt>
+<dd> Subscription video on demand (SVOD).  Allows for a digital access of the content in which consumers are charged monthly fees in return for accessing the platforms full library. access digital copies of audio-video content on a subscription basis, including on a subscription basis supported by ads, free-on-demand basis or via other non-transactional basis for electronic delivery and repeated viewing during the Term</dd>
+<dt><dfn>WHY?</dfn> means</dt>
+<dd> Why both Ad Supported Access and Non-Transactional (SVOD)?While we never intend to run adveristment in our mobile product it is possible that distribution of our experience exends to platforms that have ads in the future.  This provision is here to protect against the need to renegiate in the unlikley event that this happens and provides additional revenue to you if it does.</dd>
 <dt><dfn> License Fees</dfn> means </dt>
 <dd>The Monetary Compensation you recieve based on Exhibit A where each accepted Video will be licensed for the Term for $1.00 per minute of footage accepted </dd>
 </dl>
-    <ol>
+<ol>
 
-<h2><li> This Agreement contains the terms and conditions upon which <dfn>Content Provider</dfn> will make available to <dfn>LICENSEE</dfn> certain audio-visual programs and related content for distribution through the digital video service operated by <dfn>LICENSEE</dfn> or its affiliates.</li> <h2>
+<h2><li> This Agreement contains the terms and conditions upon which "Content Provider" will make available to "LICENSEE" certain audio-visual programs and related content for distribution through the digital video service operated by "LICENSEE" or its affiliates. </h2>
 
-<li>In consideration of the mutual covenants contained herein and other good and valuable consideration, the receipt and sufficiency of which hereby are acknowledged, <dfn>Content Provider</dfn> and <dfn>LICENSEE</dfn> hereby agree as follows:</li>
+<li>In consideration of the mutual covenants contained herein and other good and valuable consideration, the receipt and sufficiency of which hereby are acknowledged, "Content Provider" and "LICENSEE" hereby agree as follows:</li>
 
 <h2>Terms of the Agreement</h2> 
 
-<dfn><h2>>a. Term</h2></dfn>
+<dfn><h2>a. Term</h2></dfn>
 
 <p>The <dfn>INITIAL TERM</dfn> of this Agreement commences on Effective Date and continues for three years through the third anniversary of the Effective Date (“Initial Term”).  The term will automatically extend following the Initial Term for successive periods of 12 months each (each a <dfn>“Renewal Term”</dfn>, and together with the <dfn>Initial Term</dfn>, the <dfn>“Term”</dfn) unless and until terminated by either party by provision of written notice of termination to the other party given not later than 90 days prior to the conclusion of the Initial Term or the then-current Renewal Term, as applicable.</p>
  
@@ -139,7 +134,7 @@ For clarity, Customer Views will not include (and LICENSEE will not be obligated
 	•	Ad-supported Access License Fee
 	•	50% of Net Advertising Receipts.  “Net Advertising Receipts” means aggregate cash amounts collected by LICENSEE from the sale of Advertisements against any Title for Ad-Supported Access during the quarter for which License Fees are being calculated, less 15% of that aggregate cash amount (which is deemed to reflect the cost of selling Advertisements) and less any payments made to any third-party advertising platforms or networks in connection with the distribution or sale of Advertisements on those platforms or networks.  “Advertisements” means any pre-roll, mid-roll, post-roll, or overlay advertisements displayed within the video playback application within which any Title is displayed.  Payments for Ad-supported Access will be in the currency / currencies collected by LICENSEE from sale of the Advertisements.
 
-<li><h2>Warranties of the Content<h2>
+<li><h2>Warranties of the Content</h2>
  
 <li> Upon upload of the Content, Content Provider agrees to associate the Content with complete and accurate metadata necessary for the exploitation of it on the Service including but without limitation, the title, key words, video category, duration, language, etc...
  
